feat(hedging): support hedging in order to reduce latency when quering endpoints (#1081)
* feat(hedging): support hedging in order to reduce latency when quering endpoints

Signed-off-by: Ahmet DEMIR <me@ahmet2mir.eu>

* fix(hedging): move fields to struct, remove ratelimit, fail on sethedging func if not enabled, restore retry, allow unsafe funcs

Signed-off-by: Ahmet DEMIR <me@ahmet2mir.eu>

* fix(hedging): adapt suggestions

Signed-off-by: Ahmet DEMIR <me@ahmet2mir.eu>

---------

Signed-off-by: Ahmet DEMIR <me@ahmet2mir.eu>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "curl.go",
         "debug.go",
         "digest.go",
+        "hedging.go",
         "load_balancer.go",
         "middleware.go",
         "multipart.go",
@@ -42,6 +43,7 @@ go_test(
         "context_test.go",
         "curl_test.go",
         "digest_test.go",
+        "hedging_test.go",
         "load_balancer_test.go",
         "middleware_test.go",
         "multipart_test.go",
